package java.DAO;

public class VehicleDAOimpl {
}
