package main.main.java.enums;

public enum TypeVehicle {
    MOTO,
    CAR,
    BIKE
}
