package main.main.java.model;

public class Parking {
}
