package main.main.java.model;

public class User {
}
