package java.model;

public class Vehicle {
}
